# rockbox-zig

./: .dockerignore  .gitignore  .gitmodules  AUDIO_SETTINGS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.arm-unknown-linux-gnueabihf  Dockerfile.dev  HEADLESS.md  README.md  SNAPCAST.md  THREADING.md  WEBASSEMBLY.md  build.zig  build.zig.zon  dagger.json  errors  flake.nix  install.sh  string.zig
cli/: Cargo.toml  build.rs
cli/LaunchAgents/: com.github.rockbox.plist
cli/src/: lib.rs  main.rs
cli/src/api/: rockbox.v1alpha1.rs
cli/src/cmd/: bluetooth.rs  clear.rs  community.rs  login.rs  mod.rs  open.rs  repl.rs  run.rs  scan.rs  service.rs  setup.rs  start.rs  webui.rs  whoami.rs
cli/systemd/: rockbox.service
crates/airplay/: Cargo.toml  README.md
crates/airplay/src/: alac.rs  lib.rs  rtp.rs  rtsp.rs
crates/airplay/src/airplay2/: http.rs  mod.rs  pairing.rs  srp.rs  tlv8.rs  verify.rs
crates/alsa-sink/: Cargo.toml
crates/alsa-sink/src/: lib.rs
crates/audio/: Cargo.toml
crates/audio/src/: audio_stream.rs  lib.rs  main.rs
crates/bluetooth/: Cargo.toml
crates/bluetooth/src/: lib.rs
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/chromecast/: Cargo.toml  README.md
crates/chromecast/src/: lib.rs  main.rs  pcm.rs
crates/chromecast/src/types/: track.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  login.rs  settings.rs  whoami.rs
crates/cmaf/: Cargo.toml
crates/cmaf/src/: dash.rs  encoder.rs  hls.rs  http.rs  lib.rs  mp4.rs
crates/controls/: Cargo.toml
crates/controls/src/: lib.rs  main.rs
crates/controls/src/api/: rockbox.v1alpha1.rs
crates/embed/: Cargo.toml  build.rs
crates/embed/src/: daemon.rs  lib.rs
crates/expo/: Cargo.toml  README.md  build.rs  proto
crates/expo/src/: daemon.rs  jni_bridge.rs  lib.rs
crates/ext/: Cargo.toml  build.rs  example.ts
crates/ext/src/: bootstrap.js  lib.rs  main.rs
crates/ext/src/browse/: browse.js  lib.rb_browse.d.ts  mod.rs
crates/ext/src/console/: console.js
crates/ext/src/dir/: dir.js  lib.rb_dir.d.ts
crates/ext/src/playback/: mod.rs  playback.js  (+1 more)
crates/fts5/: Cargo.toml
crates/fts5/src/: lib.rs
crates/graphql/: Cargo.toml
crates/graphql/src/: lib.rs  server.rs  simplebroker.rs  types.rs
crates/hls/: Cargo.toml
crates/hls/src/: decoder.rs  demux.rs  fetcher.rs  lib.rs  manifest.rs  output.rs  player.rs
crates/http/: Cargo.toml
crates/http/src/: lib.rs
crates/jellyfin/: Cargo.toml
crates/jellyfin/migrations/: 20260629000000_jellyfin_tables.sql  20260702000000_add_jf_favorites.sql  20260702000001_add_jf_user_data.sql  20260702000002_add_jf_artist_enrichment.sql
crates/jellyfin/src/: lib.rs
crates/mpd/: Cargo.toml
crates/mpd/src/: consts.rs  dir.rs  kv.rs  lib.rs  main.rs
crates/mpris/: Cargo.toml
crates/mpris/src/: lib.rs  macros.rs  main.rs
crates/navidrome/: Cargo.toml
crates/navidrome/src/: lib.rs
crates/netstream/: Cargo.toml
crates/netstream/src/: lib.rs
crates/playlists/: Cargo.toml
crates/playlists/src/: lib.rs  resolver.rs  rules.rs
crates/plex/: Cargo.toml
crates/plex/src/: lib.rs
crates/rocksky/: Cargo.toml  proto
crates/rocksky/src/: lib.rs  main.rs
crates/rpc/: Cargo.toml  build.rs
crates/rpc/proto/: grpc-swift-proto-generator-config.json
crates/rpc/src/: bluetooth.rs  browse.rs  device.rs  genre.rs  lib.rs  library.rs  metadata.rs  playback.rs  playlist.rs  saved_playlist.rs  server.rs  settings.rs  smart_playlist.rs  sound.rs  system.rs  tagcache.rs  types.rs
gpui/: .gitignore  Cargo.toml  build.rs  package.sh  proto
gpui/src/: app.rs  client.rs  controller.rs  http_client.rs  jellyfin.rs  kodi.rs  main.rs  navidrome.rs  nd_persist.rs  now_playing.rs  server.rs  startup.rs  state.rs
gpui/src/api/: mod.rs  rockbox.v1alpha1.rs
gpui/src/ui/: animations.rs  assets.rs  global_keybinds.rs  helpers.rs  mod.rs  rockbox.rs  startup_gate.rs  theme.rs
gtk/: Cargo.toml  build.rs  meson.build
gtk/blueprint-compiler/: .coveragerc  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  MAINTENANCE.md  NEWS.md  README.md  blueprint-compiler.pc.in  blueprint-compiler.py  justfile  meson.build
gtk/blueprint-compiler/blueprintcompiler/: ast_utils.py  completions.py  decompiler.py  errors.py  gir.py  lsp.py  lsp_utils.py  main.py  parser.py  tokenizer.py  typelib.py  utils.py
gtk/blueprint-compiler/build-aux/: Dockerfile  install_deps.sh
gtk/blueprint-compiler/docs/: collect-sections.py  conf.py  flatpak.rst  index.rst  meson.build  packaging.rst  setup.rst  translations.rst
gtk/blueprint-compiler/tests/: fuzz.py  fuzz.sh  meson.build  test_deprecations.py  test_formatter.py  test_samples.py  test_tokenizer.py
gtk/build-aux/: io.github.tsirysndr.Rockbox.json  mg.tsirysndr.Rockbox.Devel.json
gtk/data/: io.github.tsirysndr.Rockbox.desktop.in.in  io.github.tsirysndr.Rockbox.metainfo.xml.in.in  meson.build  mg.tsirysndr.Rockbox.desktop.in  mg.tsirysndr.Rockbox.metainfo.xml.in.in  rockbox.gresource.xml.in
gtk/data/gtk/: album_details.blp  album_tracks.blp  albums.blp  artist.blp  artist_details.blp  artists.blp  current_playlist.blp  delete_playlist.blp  delete_playlist_folder.blp  edit_playlist.blp  edit_playlist_folder.blp  file.blp  files.blp  help-overlay.blp  likes.blp  media_controls.blp  new_playlist.blp  new_playlist_folder.blp  playlist.blp  playlist_details.blp  playlist_folder.blp  playlists.blp  preferences.blp  search.blp  show_all_playlists.blp  song.blp  songs.blp  window.blp
gtk/data/icons/: meson.build
gtk/po/: LINGUAS  fr.po
gtk/proto/: buf.yaml
gtk/src/: app.rs  config.rs.in  constants.rs  main.rs  meson.build  navigation.rs  state.rs  styles.css  time.rs
gtk/src/api/: rockbox.v1alpha1.rs
gtk/src/types/: track.rs
gtk/src/ui/: about_dialog.rs  album_tracks.rs  artist.rs  delete_playlist.rs  delete_playlist_folder.rs  edit_playlist.rs  edit_playlist_folder.rs  file.rs  media_controls.rs  mod.rs  new_playlist.rs  new_playlist_folder.rs  playlist.rs  playlist_folder.rs  preferences_dialog.rs  show_all_playlists.rs  song.rs  window.rs
(+1825 files in other folders)
