[package]
edition = "2021"
name = "rockbox"
version = "0.1.0"

[dependencies]
anyhow = "1.0.91"
clap = "4.5.16"
opener = "0.7.2"
owo-colors = "4.1.0"
prost = "0.13.2"
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tonic-web = "0.12.3"
flate2 = { version = "1.0.30", default-features = false }
zip = { version = "=2.1.6", default-features = false, features = [
  "deflate-flate2",
] }
deno = { path = "../deno/cli", features = [
  "upgrade",
  "__vendored_zlib_ng",
] } # a custom fork of Deno with Rockbox extension
rmpc = { path = "../rmpc" }
os-release = "0.1.0"
reqwest = { version = "0.12.5", features = [
  "rustls-tls",
  "json",

], default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
open = "5.3.2"
warp = "0.3.7"
dirs = "6.0.0"

[build-dependencies]
tonic-build = "0.12.3"
