[package]
edition = "2021"
name = "rockbox-audio"
version = "0.1.0"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
anyhow = "1.0.92"
cpal = "0.15.3"
crossbeam-channel = "0.5.13"
futures-channel = "0.3.31"
futures-util = "0.3.31"
once_cell = "1.20.2"
rand = "0.8.5"
rodio = "0.19.0"
slab = "0.4.9"
symphonia = "0.5.4"
tokio = {version = "1.36.0", features = ["full"]}
