[package]
edition = "2021"
name = "rockbox-bluetooth"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
bluer = "0.17"
futures = "0.3"
tokio = { version = "1", features = ["time"] }
