[package]
name = "rockbox-cache"
version = "0.1.0"
edition = "2021"

[lib]
name = "rockbox_cache"
crate-type = ["rlib"]

[dependencies]
once_cell = "1.17.1"
sha2 = "0.10"
libc = "0.2.168"
reqwest = { version = "0.12.5", features = ["blocking", "rustls-tls-native-roots"], default-features = false }
tracing = { workspace = true }
