[package]
edition = "2021"
name = "rockbox-cli"
version = "0.1.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.90"
clap = "4.5.16"
owo-colors = "4.1.0"
rockbox-library = {path = "../library"}
rockbox-search = {path = "../search"}
rockbox-settings = {path = "../settings"}
rockbox-rocksky = {path = "../rocksky"}
tokio = {version = "1.36.0", features = ["full"]}
