[package]
edition = "2021"
name = "rockbox-cli"
version = "0.1.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.90"
rockbox-airplay = {path = "../airplay"}
rockbox-slim = {path = "../slim"}
rockbox-upnp = {path = "../upnp", features = ["ffi"]}
rockbox-chromecast = {path = "../chromecast", features = ["ffi"]}
clap = "4.5.16"
owo-colors = "4.1.0"
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
rockbox-library = {path = "../library"}
rockbox-playlists = {path = "../playlists"}
rockbox-typesense = {path = "../typesense"}
rockbox-settings = {path = "../settings"}
rockbox-rocksky = {path = "../rocksky"}
tokio = {version = "1.36.0", features = ["full"]}
dirs = "6.0.0"
uuid.workspace = true
libc.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
