[package]
name = "rockbox-controls"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.93"
prost = "0.13.2"
rockbox-library = {path= "../library"}
tokio = {version = "1.36.0", features = ["full"]}
tonic = "0.12.3"
urlencoding = "2.1.3"
souvlaki = "0.8.3"
winit = "0.30.12"

[build-dependencies]
tonic-build = "0.12.3"
