[package]
name = "rockbox-expo"
version = "0.1.0"
edition = "2021"
description = "C-ABI gRPC client wrapper for embedding in the rockbox-zig Expo (React Native) mobile app"
license = "LGPL-2.1"

[lib]
name = "rockbox_expo"
crate-type = ["staticlib", "cdylib"]

[dependencies]
prost = "0.13"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
tonic = { version = "0.12", default-features = false, features = ["transport", "codegen", "prost"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
rockbox-discovery = { path = "../discovery" }

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = ["prost", "transport"] }
