[package]
name = "rockbox-expo"
version = "0.1.0"
edition = "2021"
description = "C-ABI gRPC client + optional embedded rockbox daemon for the Expo (React Native) app"
license = "LGPL-2.1"

[lib]
name = "rockbox_expo"
crate-type = ["staticlib", "cdylib"]

# ── Features ────────────────────────────────────────────────────────────────
#
# `embedded-daemon`: link the full rockbox firmware + crates/server into the
# cdylib so the phone can play audio in-process. Enabled by the Android build
# script (and later iOS). Cascades to FTS5 search to avoid typesense.
#
# Build: `cargo ndk -t arm64-v8a -- build --features embedded-daemon`
[features]
default = []
embedded-daemon = [
    "dep:rockbox-server",
    "dep:rockbox-settings",
    "dep:rockbox-library",
    "dep:rockbox-graphql",
    "dep:rockbox-sys",
    "dep:rockbox-webui",
    "dep:rbnetstream",            # for the #[used] keepalives in daemon.rs
    # PCM sink crates — each provides a `_link_<name>()` fn that we call
    # from the keepalive so rustc keeps the rlib in the cdylib link.
    # Enabling `ffi` on each makes their #[no_mangle] pcm_*_* C-ABI
    # exports actually compile (gated otherwise so desktop dev builds
    # without the firmware don't pay for them).
    "dep:rockbox-cpal-sink",      # cpal PCM sink on Android cdylib (replaces pcm-aaudio.c)
    "dep:rockbox-airplay",
    "dep:rockbox-slim",       "rockbox-slim/ffi",
    "dep:rockbox-chromecast", "rockbox-chromecast/ffi",
    "dep:rockbox-upnp",       "rockbox-upnp/ffi",
    "dep:rockbox-cmaf",       "rockbox-cmaf/ffi",
    "rockbox-server/fts5",        # cascades to rockbox-graphql/fts5 + rockbox-rpc/fts5
]

# ── Always-on dependencies (gRPC client + JNI/Swift glue) ──────────────────
[dependencies]
prost = "0.13"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
tonic = { version = "0.12", default-features = false, features = ["transport", "codegen", "prost"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
rockbox-discovery = { path = "../discovery" }
reqwest = { version = "0.12", default-features = false, features = ["json"] }

# ── Optional in-process daemon (Android cdylib build) ──────────────────────
# `default-features = false` keeps unrelated transitive features (sdl, mpris,
# typesense, …) from sneaking in. The `embedded-daemon` feature explicitly
# selects only what we need.
rockbox-server   = { path = "../server",   optional = true, default-features = false }
rockbox-settings = { path = "../settings", optional = true, default-features = false }
rockbox-library  = { path = "../library",  optional = true, default-features = false }
rockbox-graphql  = { path = "../graphql",  optional = true, default-features = false }
rockbox-sys      = { path = "../sys",      optional = true, default-features = false }
rockbox-webui    = { path = "../../webui", optional = true, default-features = false }
# netstream's lib is named "rbnetstream"; we depend on it directly so the
# #[used] keepalives in daemon.rs can take addresses of its C ABI exports.
rbnetstream        = { path = "../netstream",   package = "netstream", optional = true }
# PCM sink crates with C ABI exports the firmware calls (pcm_airplay_*,
# pcm_squeezelite_*, pcm_chromecast_*, pcm_upnp_*). Each has a tiny
# _link_<name>() helper specifically for cdylib keepalive.
rockbox-cpal-sink  = { path = "../cpal-sink",  optional = true }
rockbox-airplay    = { path = "../airplay",    optional = true }
rockbox-slim       = { path = "../slim",       optional = true }
rockbox-chromecast = { path = "../chromecast", optional = true }
rockbox-upnp       = { path = "../upnp",       optional = true }
rockbox-cmaf       = { path = "../cmaf",       optional = true }

# ── Android-only ───────────────────────────────────────────────────────────
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
# Bridges `tracing` events to logcat. Used by the daemon module to send
# init/teardown logs to `adb logcat -s rockbox`.
tracing            = "0.1"
tracing-android    = "0.2"
# ndk-context provides the JavaVM* / Activity* pointers used by cpal's Android
# audio backend (oboe → android_media JNI). We initialize it in JNI_OnLoad so
# that pcm_cpal_start() can call cpal::default_host() without panicking.
ndk-context        = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "registry", "fmt"] }

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = ["prost", "transport"] }
