[package]
edition = "2021"
name = "rockbox-ext"
version = "0.1.0"

[dependencies]
deno_ast = {version = "0.41.2", features = ["transpiling"]}
deno_console = "0.166.0"
deno_core = {version = "0.306.0"}
deno_runtime = "0.177.0"
reqwest = {version = "0.12.7", features = ["rustls-tls"], default-features = false}
tokio = {version = "1.36.0", features = ["full"]}

[build-dependencies]
deno_console = "0.166.0"
deno_core = {version = "0.306.0"}
