[package]
edition = "2021"
name = "rockbox-ext"
version = "0.1.0"

[dependencies]
deno_ast = {version = "0.41.2", features = ["transpiling"]}
deno_console = "0.167.0"
deno_core = {version = "0.307.0"}
deno_fetch = "0.191.0"
deno_http = "0.166.0"
deno_net = "0.160.0"
deno_runtime = "0.177.0"
deno_url = "0.168.0"
deno_web = "0.199.0"
deno_webidl = "0.168.0"
deno_websocket = "0.173.0"
reqwest = {version = "0.12.7", features = ["rustls-tls", "json"], default-features = false}
rockbox-sys = {path = "../sys"}
tokio = {version = "1.36.0", features = ["full"]}

[build-dependencies]
deno_console = "0.167.0"
deno_core = {version = "0.307.0"}
deno_fetch = "0.191.0"
deno_http = "0.166.0"
deno_net = "0.160.0"
deno_url = "0.168.0"
deno_web = "0.199.0"
deno_webidl = "0.168.0"
deno_websocket = "0.173.0"
