[package]
edition = "2021"
name = "rockbox-graphql"
version = "0.1.0"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.9.0"
anyhow = "1.0.87"
async-graphql = "7.0.9"
async-graphql-actix-web = "7.0.9"
chrono = {version = "0.4.38", features = ["serde"]}
cuid = "1.3.3"
futures = "0.3.30"
futures-channel = "0.3.31"
futures-util = "0.3.31"
md5 = "0.7.0"
once_cell = "1.20.2"
owo-colors = "4.1.0"
reqwest = {version = "0.12.7", features = ["rustls-tls", "json"], default-features = false}
rockbox-library = {path = "../library"}
rockbox-search = {path = "../search"}
rockbox-sys = {path = "../sys"}
rockbox-types = {path = "../types"}
rockbox-webui = {path = "../../webui"}
serde = "1.0.210"
serde_json = "1.0.128"
slab = "0.4.9"
sqlx = {version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono", "derive", "macros"]}
tantivy = "0.22.0"
tokio = {version = "1.36.0", features = ["full"]}
