[package]
edition = "2021"
name = "rockbox-hls"
version = "0.1.0"

[lib]
crate-type = ["rlib"]

[features]
default = []
ffi = []

[dependencies]
anyhow = "1"
bytes = { workspace = true }
m3u8-rs = "6"
dash-mpd = { version = "0.18", default-features = false, features = ["scte35"] }
once_cell = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
symphonia = { version = "0.5", default-features = false, features = ["isomp4", "aac", "mpa"] }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
