[package]
edition = "2021"
name = "rockbox-mpd"
version = "0.1.0"

[dependencies]
anyhow = "1.0.93"
regex = "1.11.1"
rockbox-graphql = {path = "../graphql"}
rockbox-rpc = {path = "../rpc"}
rockbox-sys = {path = "../sys"}
tokio = {version = "1.36.0", features = ["full"]}
tokio-stream = "0.1"
tonic = "0.12.2"
